# ShortcutInput

./: CMakeLists.txt  LICENSE.txt  README.md  shortcutlineedit.cpp  shortcutlineedit.h  widget.cpp  widget.ui  xkeysequenceedit.cpp  xkeysequenceedit.h
New folder/: xkeysequenceedit.cpp  xkeysequenceedit.h
